# cpp-flame-fractals

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Fractal.cpp  Fractal.h  Mesh.cpp  Mesh.h
src/common/: auxiliary.h
src/function/: AbstractFunction.cpp  AbstractFunction.h  MandelbrotFunction.cpp  MandelbrotFunction.h
